--- a/04-CSS-Layouts/blog.html
+++ b/04-CSS-Layouts/blog.html
@@ -4,7 +4,7 @@
     <title>BLOG</title>
   </head>
   <body>
-    <h2>BLOG</h2>
+    <h2>BLOG Ep 3 19:38</h2>
     <a href="index.html">Back to home</a>
   </body>
 </html>
