--- a/04-CSS-Layouts/flexbox.html
+++ b/04-CSS-Layouts/flexbox.html
@@ -6,6 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Flexbox</title>
     <style>
+      a:link {
+        color: #1098ad;
+        text-decoration: none;
+        border: 2px solid #1098ad;
+        margin-left: 50%;
+      }
+
+      a:visited {
+        color: #1098ad;
+        text-decoration: none;
+        border: 2px solid #1098ad;
+        margin-left: 50%;
+      }
+
       .el--1 {
         background-color: blueviolet;
       }
@@ -78,6 +92,8 @@
     </style>
   </head>
   <body>
+    <a href="/04-CSS-Layouts/index.html">Go Back</a>
+    <a href="/">Navigate</a>
     <div class="container">
       <div class="el el--1">HTML</div>
       <div class="el el--2">and</div>
