--- a/04-CSS-Layouts/blog.html
+++ b/04-CSS-Layouts/blog.html
@@ -2,9 +2,27 @@
 <html>
   <head>
     <title>BLOG</title>
+    <style>
+      a:link {
+  color: #1098ad;
+  text-decoration: none;
+  border: 2px solid #1098ad;
+  margin-left: 50%;
+}
+
+a:visited {
+  color: #1098ad;
+  text-decoration: none;
+  border: 2px solid #1098ad;
+  margin-left: 50%;
+}
+    </style>
   </head>
   <body>
-    <h2>BLOG Ep 3 19:38</h2>
-    <a href="index.html">Back to home</a>
+    <h1>
+      <a href="index.html">Back to home</a>
+      <a href="/">Navigate</a>
+      <a href="https://aniwatchtv.to">Blog.html</a>
+    </h1>
   </body>
 </html>
