--- a/04-CSS-Layouts/blog.html
+++ b/04-CSS-Layouts/blog.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>BLOG</title>
+    <title>BLOG  €<p>p</p>!&</title>
     <style>
       a:link {
   color: #1098ad;
@@ -22,7 +22,6 @@ a:visited {
     <h1>
       <a href="index.html">Back to home</a>
       <a href="/">Navigate</a>
-      <a href="https://aniwatchtv.to">Blog.html</a>
     </h1>
   </body>
 </html>
