--- a/00-Navigation/index.html
+++ b/00-Navigation/index.html
@@ -11,33 +11,38 @@
     <header class="header-1">
       <h1>Navigation</h1>
       <p>Press The Button where you want to go :)</p>
+      <p>
+        If you want to got to
+        <a href="/04-CSS-Layouts/flexbox.html">Flexbox</a> or
+        <a href="/04-CSS-Layouts/css-grid.html">CSS-Grid</a> Click on the
+        underlined words
+      </p>
     </header>
 
     <div>
-      <a href="/00-Navigation/"><input type="button" value="01-Test"></a>
+      <a href="/00-Navigation/"><input type="button" value="01-Test" /></a><p>Navigation Page</p>
       <a href="/02-HTML-Fundamentals/"
         ><input type="button" value="02-HTML-Fundamentals" /></a
-      ><br />
+      ><p>Completed</p> <br />
       <a href="/03-CSS-Fundamentals/"
         ><input type="button" value="03-CSS-Fundamentals" /></a
-      ><br />
-      <a href="/04-CSS-Layouts/index.html"><input type="button" value="04-CSS-Layouts"></a>
-      <a href="/05-Design">
-        <input type="button" value="05-Design" />
-      </a><br>
+      ><p>Completed</p><br/>
+      <a href="/04-CSS-Layouts/index.html"
+        ><input type="button" value="04-CSS-Layouts"
+      /></a><p> Progressing...</p>
+      <a href="/05-Design"> <input type="button" value="05-Design" /></a><p>Not Started</p><br />
       <a href="/06-Components">
-        <input type="button" value="06-Components" />
-      </a><br>
+        <input type="button" value="06-Components" /></a
+      ><p>Not Started</p><br />
       <a href="/07-Omnifood-Desktop"
         ><input type="button" value="07-Omnifood-Desktop" /></a
-      ><br>
+      ><p>Not Started</p><br />
       <a href="/08-Omnifood-Responsive/"
-        ><input type="button" value="08-Omnifood-Responsive"
-      /></a><br>
-      <a href="09-Omnifood-Optimizations"
-        ><input type="button" value="09-Omnifood-Optimizations"
-      /></a><br>
+        ><input type="button" value="08-Omnifood-Responsive" /></a
+      ><p>Not Started</p><br />
+      <a href="/09-Omnifood-Optimizations"
+        ><input type="button" value="09-Omnifood-Optimizations" /></a
+      ><p>Not Started</p><br />
     </div>
-    <script src="main.js"></script>
   </body>
 </html>
