--- a/03-CSS-Fundamentals/blog.html
+++ b/03-CSS-Fundamentals/blog.html
@@ -3,9 +3,39 @@
   <head>
     <meta charset="UTC-8" />
     <title>blog</title>
+    <style>
+      * {
+        font-family: sans-serif;
+        font-style: italic;
+      }
+
+      body {
+        background-color: #fff;
+      }
+
+      input {
+        margin-bottom: 30px;
+        margin-left: 45%;
+        color: #1098ad;
+        border: 2px solid #00ddff;
+        padding: 10px;
+        font-size: 15px;
+        font-weight: bold;
+      }
+
+      h1 {
+        border: 5px solid #1098ad;
+        color: #1098ad;
+        font-style: italic;
+        padding-left: 50px;
+        padding-bottom: 35px;
+        background-color: #f7f7f7;
+        margin-bottom: 50px;
+      }
+    </style>
   </head>
   <body>
-    <h2>BLOG</h2>
-    <a href="index.html">Back to home</a>
+    <h1>BLOG</h1>
+    <a href="/00-Navigation/"><input type="button" value="00-Navigation" /></a>
   </body>
 </html>
