--- a/04-CSS-Layouts/blog.html
+++ b/04-CSS-Layouts/blog.html
@@ -1,12 +1,41 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>BLOG  €<p>p</p>!&</title>
+    <meta charset="UTC-8" />
+    <title>blog</title>
+    <style>
+      * {
+        font-family: sans-serif;
+        font-style: italic;
+      }
+
+      body {
+        background-color: #fff;
+      }
+
+      input {
+        margin-bottom: 30px;
+        margin-left: 45%;
+        color: #1098ad;
+        border: 2px solid #00ddff;
+        padding: 10px;
+        font-size: 15px;
+        font-weight: bold;
+      }
+
+      h1 {
+        border: 5px solid #1098ad;
+        color: #1098ad;
+        font-style: italic;
+        padding-left: 50px;
+        padding-bottom: 35px;
+        background-color: #f7f7f7;
+        margin-bottom: 50px;
+      }
+    </style>
   </head>
   <body>
-    <h1>
-      <a href="index.html"><input type="button" value="Back To Home"></a>
-      <a href="navigate.html"><input type="button" value="Back To Home"></a>
-    </h1>
+    <h1>BLOG</h1>
+    <a href="/00-Navigation/"><input type="button" value="00-Navigation" /></a>
   </body>
 </html>
