--- a/04-CSS-Layouts/flexbox.html
+++ b/04-CSS-Layouts/flexbox.html
@@ -6,7 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Flexbox</title>
     <style>
+      * {
+        font-family: sans-serif;
+        font-style: italic;
+      }
 
+      body {
+        background-color: #fff;
+      }
+
+      input {
+        margin-bottom: 30px;
+        margin-left: 45%;
+        color: #1098ad;
+        border: 2px solid #00ddff;
+        padding: 10px;
+        font-size: 15px;
+        font-weight: bold;
+      }
+
+      h1 {
+        border: 5px solid #1098ad;
+        color: #1098ad;
+        font-style: italic;
+        padding-left: 50px;
+        padding-bottom: 35px;
+        background-color: #f7f7f7;
+        margin-bottom: 50px;
+      }
       .el--1 {
         background-color: blueviolet;
       }
@@ -79,8 +106,8 @@
     </style>
   </head>
   <body>
-    <a href="/04-CSS-Layouts/index.html">Go Back</a>
-    <a href="/">Navigate</a>
+    <h1>Flexbox</h1>
+    <a href="/00-Navigation/"><input type="button" value="00-Navigation" /></a>
     <div class="container">
       <div class="el el--1">HTML</div>
       <div class="el el--2">and</div>
