On branch master

--- a/03-CSS-Fundamentals/index.html
+++ b/03-CSS-Fundamentals/index.html
@@ -124,7 +124,7 @@
         <ul class="related-lis">
           <li>
             <img
-              src="/IMG/related-1.jpg"
+              src="IMG/related-1.jpg"
               alt="A Person programming           "
               width="75"
               height="75"
@@ -134,7 +134,7 @@
           </li>
           <li>
             <img
-              src="/IMG/related-2.jpg"
+              src="IMG/related-2.jpg"
               alt="Thunder striking               "
               width="75"
               height="75"
@@ -144,7 +144,7 @@
           </li>
           <li>
             <img
-              src="/IMG/related-3.jpg"
+              src="IMG/related-3.jpg"
               alt="A JavaScript Code             "
               width="75"
               height="75"
