--- a/CCTASLT/Index.html
+++ b/CCTASLT/Index.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <a href="/04-CSS-Layouts/index.html">Go Back</a>
-    <a href="/">Navigate</a>
+    <a href="/00-Navigation/"><input type="button" value="00-Navigation" /></a>
     <article class="product">
       <h2 class="product-title">Converse Chuck Taylor All Star Low Top</h2>
       <img
