--- a/02-HTML-Fundamentals/index.html
+++ b/02-HTML-Fundamentals/index.html
@@ -28,7 +28,7 @@
         <h2>The Basic Language of the Web: HTML</h2>
 
         <img
-          src="/IMG/laura-jones.jpg"
+          src="IMG/laura-jones.jpg"
           alt="Image of author"
           width="50"
           height="50"
@@ -37,7 +37,7 @@
         <p>Posted by <strong>Laura Jones</strong> on Monday, June 21st 2027</p>
 
         <img
-          src="/IMG/post-img.jpg"
+          src="IMG/post-img.jpg"
           alt="HTML code on a screen"
           width="500"
           height="200"
@@ -110,7 +110,7 @@
       <ul>
         <li>
           <img
-            src="/IMG/related-1.jpg"
+            src="IMG/related-1.jpg"
             alt="A Person programming           "
             width="75"
             height="75"
@@ -120,7 +120,7 @@
         </li>
         <li>
           <img
-            src="/IMG/related-2.jpg"
+            src="IMG/related-2.jpg"
             alt="Thunder striking               "
             width="75"
             height="75"
@@ -130,7 +130,7 @@
         </li>
         <li>
           <img
-            src="/IMG/related-3.jpg"
+            src="IMG/related-3.jpg"
             alt="A JavaScript Code             "
             width="75"
             height="75"
