--- a/PROJECT RANDOM/index.html
+++ b/PROJECT RANDOM/index.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -10,8 +9,8 @@
   <body>
     <div class="side">
       <div class="sub-top">
-        <input type="button" class="btn" value="Close Sidebar" >
-        <input type="button" class="btn" value="New Chat" style="float: right; margin-right: 20px;">
+        <input type="button" class="btn" value="Close Sidebar" />
+        <input type="button" class="btn" value="New Chat" />
       </div>
       <div class="sub-middle"></div>
       <div class="sub-bottom"></div>
@@ -23,29 +22,3 @@
     </div>
   </body>
 </html>
-=======
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <title>PROJECT RANDOM</title>
-  </head>
-  <body>
-    <div class="side">
-      <div class="sub-top">
-        <input type="button" class="btn" value="Close Sidebar" >
-        <input type="button" class="btn" value="New Chat" style="float: right; margin-right: 20px;">
-      </div>
-      <div class="sub-middle"></div>
-      <div class="sub-bottom"></div>
-    </div>
-    <div class="main">
-      <div class="sub-top"></div>
-      <div class="sub-middle"></div>
-      <div class="sub-bottom"></div>
-    </div>
-  </body>
-</html>
->>>>>>> 3b5d1e0c5bc7e82638bcda43f2de846714819ba5
