--- a/00-Navigation/index.html
+++ b/00-Navigation/index.html
@@ -58,7 +58,9 @@
       /></a>
       <p>Not Started</p>
       <br />
-      <a href="/CCTASLT/Index.html"><input type="button" value="Challenges"></a>
+      <a href="/CCTASLT/Index.html"
+        ><input type="button" value="Challenges"
+      /></a>
       <p>Progressing...</p>
     </div>
   </body>
