--- a/00-Navigation/index.html
+++ b/00-Navigation/index.html
@@ -59,7 +59,7 @@
       <p>Not Started</p>
       <br />
       <a href="/CCTASLT/Index.html"><input type="button" value="Challenges"></a>
-      <p>Progressing...</p>
+      <p>Progressing....</p>
     </div>
   </body>
 </html>
