Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
Author:    ActuallyTheBestBro <bolisettyhritvik@gmail.com>

On branch master
Your branch is up to date with 'origin/master'.

Changes to be committed:
thanks

--- a/CCTASLT/Index.html
+++ b/CCTASLT/Index.html
@@ -7,7 +7,21 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <a href="/00-Navigation/"><input type="button" value="00-Navigation" /></a>
+    <a href="Navigation/"
+      ><input
+        style="
+          margin-left: 5%;
+          color: #1098ad;
+          padding: 10px;
+          font-size: 15px;
+          font-weight: bold;
+          background-color: #f7f7f7;
+          border: 2px solid #1098ad;
+          margin-top: 30px;
+        "
+        type="button"
+        value="00-Navigation"
+    /></a>
     <article class="product">
       <h2 class="product-title">Converse Chuck Taylor All Star Low Top</h2>
       <img
