--- a/00-Navigation/index.html
+++ b/00-Navigation/index.html
@@ -33,7 +33,7 @@
       <br />
       <a href="/04-CSS-Layouts/index.html"
         ><input type="button" value="04-CSS-Layouts"
-      /></a>
+/workspaces/HTML      /></a>
       <p>Progressing...</p>
       <a href="/05-Design"> <input type="button" value="05-Design" /></a>
       <p>Not Started</p>
@@ -43,7 +43,7 @@
       /></a>
       <p>Not Started</p>
       <br />
-      <a href="/07-Omnifood-Desktop"
+      <a href="/07-Omnifood-Desktop/content/"
         ><input type="button" value="07-Omnifood-Desktop"
       /></a>
       <p>Not Started</p>
