--- a/05-Design/index.html
+++ b/05-Design/index.html
@@ -9,21 +9,21 @@
     <title>Lisbon Chair Shop</title>
   </head>
   <body>
-      <a href="/00-Navigation/"
-        ><input
-          style="
-            margin-bottom: 30px;
-            margin-left: 25%;
-            color: #1098ad;
-            padding: 10px;
-            font-size: 15px;
-            font-weight: bold;
-            background-color: #f7f7f7;
-            border: 2px solid #1098ad;
-          "
-          type="button"
-          value="00-Navigation"
-      /></a>
+    <a href="/00-Navigation/"
+      ><input
+        style="
+          margin-left: 5%;
+          color: #1098ad;
+          padding: 10px;
+          font-size: 15px;
+          font-weight: bold;
+          background-color: #f7f7f7;
+          border: 2px solid #1098ad;
+          margin-top: 30px;
+        "
+        type="button"
+        value="00-Navigation"
+    /></a>
     <div class="container">
       <header>
         <div class="header-text-box">
