--- a/04-CSS-Layouts/blog.html
+++ b/04-CSS-Layouts/blog.html
@@ -35,7 +35,7 @@
     </style>
   </head>
   <body>
-    <h1>BLOG</h1>
+    <h1>BLOG €q!$ %:#%</h1>
     <a href="/00-Navigation/"><input type="button" value="00-Navigation" /></a>
   </body>
 </html>
