--- a/00-Navigation/index.html
+++ b/00-Navigation/index.html
@@ -60,6 +60,8 @@
       <br />
       <a href="/CCTASLT/Index.html"><input type="button" value="Challenges"></a>
       <p>Progressing....</p>
+      <a href="/00 Navigation/index.html"><input type="button" value="Others"></a>
+      <p>Progress not available</p>
     </div>
   </body>
 </html>
