--- a/CCTASLT/Index.html
+++ b/CCTASLT/Index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <a href="Navigation/"
+    <a href="/00-Navigation/index.html"
       ><input
         style="
           margin-left: 5%;
