--- a/HTML-CSS-Master-Course/html-css-course-master/final/07-Omnifood-Desktop/index.html
+++ b/HTML-CSS-Master-Course/html-css-course-master/final/07-Omnifood-Desktop/index.html
@@ -32,6 +32,11 @@
       </a>
       <nav class="main-nav">
         <ul class="main-nav-list">
+          <li>
+            <a class="main-nav-link" href="/00-Navigation/index.html"
+              >Navigation</a
+            >
+          </li>
           <li><a class="main-nav-link" href="#">How it works</a></li>
           <li><a class="main-nav-link" href="#">Meals</a></li>
           <li><a class="main-nav-link" href="#">Testimonials</a></li>
