--- a/HTML-CSS-Master-Course/html-css-course-master/final/04-CSS-Layouts/index.html
+++ b/HTML-CSS-Master-Course/html-css-course-master/final/04-CSS-Layouts/index.html
@@ -23,8 +23,9 @@
 
         <nav>
           <!-- <strong>This is the navigation</strong> -->
+          <a href="/00-Navigation/index.html">Navigate</a>
           <a href="blog.html">Blog</a>
-          <a href="#">Challenges</a>
+          <a href="/CCTASLT/Index.html">Challenges</a>
           <a href="flexbox.html">Flexbox</a>
           <a href="css-grid.html">CSS Grid</a>
         </nav>
