--- a/HTML-CSS-Master-Course/html-css-course-master/final/09-Omnifood-Optimizations/index.html
+++ b/HTML-CSS-Master-Course/html-css-course-master/final/09-Omnifood-Optimizations/index.html
@@ -49,6 +49,11 @@
 
       <nav class="main-nav">
         <ul class="main-nav-list">
+          <li>
+            <a class="main-nav-link" href="/00-Navigation/index.html"
+              >Navigation</a
+            >
+          </li>
           <li><a class="main-nav-link" href="#how">How it works</a></li>
           <li><a class="main-nav-link" href="#meals">Meals</a></li>
           <li>
