--- a/hi/index.html
+++ b/hi/index.html
@@ -1,27 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <title>Document</title>
-</head>
-<body>
-  <iframe src="https://amazon.de" frameborder="0"></iframe>
-  <a href="/00-Navigation/index.html"
-  ><input
-    style="
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Document</title>
+  </head>
+  <body>
+    <!-- <iframe src="https://amazon.de" frameborder="0"></iframe> -->
+    <a href="/00-Navigation/index.html"><input type="button" value="00-Navigation" /></a><br /><br>
+    <a href="https://amazon.de"><input type="button" value="Amazon" /></a><br /><br>
+    <a href="https://decathlon.de"><input type="button" value="Decathlon" /></a><br><br>
+    <a href="https://booking.com"><input type="button" value="Booking.com"></a><br><br>
 
-      color: #1098ad;
-      padding: 10px;
-      font-size: 15px;
-      font-weight: bold;
-      background-color: #f7f7f7;
-      border: 2px solid #1098ad;
-    "
-    type="button"
-    value="00-Navigation"
-/></a>
-
-</body>
+  </body>
 </html>
