--- a/00 Navigation/index.html
+++ b/00 Navigation/index.html
@@ -1,33 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/00-Navigation/style.css">
-  <title>Navigation-2</title>
-</head>
-<body>
-  <header class="header-1">
-    <h1>Navigation</h1>
-    <p>Press The Button where you want to go :)</p>
-  </header>
-  <div>
-    <a href="/PROJECT RANDOM/index.html"><input type="button" value="ChatGPT Interface"></a>
-    <p>Progressing...</p><br>
-    <a href="/HTML-CSS-Master-Course/html-css-course-master/final/04-CSS-Layouts/index.html"><input type="button" value="Final 04-CSS-Layouts"></a>
-    <p>Final</p><br>
-    <a href="/HTML-CSS-Master-Course/html-css-course-master/final/05-Design/"><input type="button" value="Final 05-Design"></a>
-    <p>Final</p><br>
-    <a href="/HTML-CSS-Master-Course/html-css-course-master/final/06-Components/"><input type="button" value="Final 06-Components"></a>
-    <p>Final</p><br>
-    <a href="/HTML-CSS-Master-Course/html-css-course-master/final/07-Omnifood-Desktop/index.html"><input type="button" value="Final 07-Omnifood-Desktop"></a>
-    <p>Final</p><br>
-    <a href="/HTML-CSS-Master-Course/html-css-course-master/final/08-Omnifood-Responsive/index.html"><input type="button" value="Final 08-Omnifood-Responsive"></a>
-    <p>Final</p><br>
-    <a href="/HTML-CSS-Master-Course/html-css-course-master/final/09-Omnifood-Optimizations/"><input type="button" value="Final 09-Omnifood-Optimizations"></a>
-    <p>Final</p><br>
-    <a href="/00-Navigation/index.html"><input type="button" value="Go Back to Navigation"></a>
-    <p>Navigation</p><br>
-  </div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/00-Navigation/style.css" />
+    <title>Navigation-2</title>
+  </head>
+  <body>
+    <header class="header-1">
+      <h1>Navigation</h1>
+      <p>Press The Button where you want to go :)</p>
+    </header>
+    <div>
+      <a href="/PROJECT RANDOM/index.html"
+        ><input type="button" value="ChatGPT Interface"
+      /></a>
+      <p>Progressing...</p>
+      <br />
+      <a
+        href="/HTML-CSS-Master-Course/html-css-course-master/final/04-CSS-Layouts/index.html"
+        ><input type="button" value="Final 04-CSS-Layouts"
+      /></a>
+      <p>Final</p>
+      <br />
+      <a href="/HTML-CSS-Master-Course/html-css-course-master/final/05-Design/"
+        ><input type="button" value="Final 05-Design"
+      /></a>
+      <p>Final</p>
+      <br />
+      <a
+        href="/HTML-CSS-Master-Course/html-css-course-master/final/06-Components/"
+        ><input type="button" value="Final 06-Components"
+      /></a>
+      <p>Final</p>
+      <br />
+      <a
+        href="/HTML-CSS-Master-Course/html-css-course-master/final/07-Omnifood-Desktop/index.html"
+        ><input type="button" value="Final 07-Omnifood-Desktop"
+      /></a>
+      <p>Final</p>
+      <br />
+      <a
+        href="/HTML-CSS-Master-Course/html-css-course-master/final/08-Omnifood-Responsive/index.html"
+        ><input type="button" value="Final 08-Omnifood-Responsive"
+      /></a>
+      <p>Final</p>
+      <br />
+      <a
+        href="/HTML-CSS-Master-Course/html-css-course-master/final/09-Omnifood-Optimizations/"
+        ><input type="button" value="Final 09-Omnifood-Optimizations"
+      /></a>
+      <p>Final</p>
+      <br />
+      <a href="/hi/index.html"><input type="button" value="Projects" /></a>
+      <p>Progressing...</p>
+      <br />
+      <a href="/00-Navigation/index.html"
+        ><input type="button" value="Go Back to Navigation"
+      /></a>
+      <p>Navigation</p>
+      <br />
+    </div>
+  </body>
 </html>
