--- a/04-CSS-Layouts/css-grid.html
+++ b/04-CSS-Layouts/css-grid.html
@@ -5,89 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSS Grid</title>
-    <style>
-      * {
-        font-family: sans-serif;
-        font-style: italic;
-      }
-
-      body {
-        background-color: #fff;
-      }
-
-      input {
-        margin-bottom: 30px;
-        margin-left: 45%;
-        color: #1098ad;
-        border: 2px solid #00ddff;
-        padding: 10px;
-        font-size: 15px;
-        font-weight: bold;
-      }
-
-      h1 {
-        border: 5px solid #1098ad;
-        color: #1098ad;
-        font-style: italic;
-        padding-left: 50px;
-        padding-bottom: 35px;
-        background-color: #f7f7f7;
-        margin-bottom: 50px;
-      }
-
-      .el--1 {
-        background-color: blueviolet;
-      }
-      .el--2 {
-        background-color: orangered;
-      }
-      .el--3 {
-        background-color: green;
-        height: 150px;
-      }
-      .el--4 {
-        background-color: goldenrod;
-      }
-      .el--5 {
-        background-color: palevioletred;
-      }
-      .el--6 {
-        background-color: steelblue;
-      }
-      .el--7 {
-        background-color: yellow;
-      }
-      .el--8 {
-        background-color: crimson;
-      }
-
-      .container--1 {
-        /* STARTER */
-        font-family: sans-serif;
-        background-color: #ddd;
-        font-size: 30px;
-        margin: 40px;
-
-        /* CSS GRID */
-        display: grid;
-        grid-template-columns: 200px 200px 100px 100px;
-      }
-
-      .container--2 {
-        display: none;
-
-        /* STARTER */
-        font-family: sans-serif;
-        background-color: black;
-        font-size: 40px;
-        margin: 100px;
-
-        width: 1000px;
-        height: 600px;
-
-        /* CSS GRID */
-      }
-    </style>
+<link rel="stylesheet" href="/04-CSS-Layouts/css/css-grid.css">
   </head>
   <body>
     <h1>CSS-Grid</h1>
