--- a/00-Navigation/index.html
+++ b/00-Navigation/index.html
@@ -33,7 +33,7 @@
       <br />
       <a href="/04-CSS-Layouts/index.html"
         ><input type="button" value="04-CSS-Layouts"
-/workspaces/HTML      /></a>
+      /></a>
       <p>Progressing...</p>
       <a href="/05-Design"> <input type="button" value="05-Design" /></a>
       <p>Not Started</p>
@@ -58,7 +58,9 @@
       /></a>
       <p>Not Started</p>
       <br />
-      <a href="/CCTASLT/Index.html"><input type="button" value="Challenges"></a>
+      <a href="/CCTASLT/Index.html"
+        ><input type="button" value="Challenges"
+      /></a>
       <p>Progressing....</p>
     </div>
   </body>
